(In the process of debugging..) cleaned up the Premerge code (removed excessive use of Spring); PS: current issue is - getting "Invalid access of stack red zone" during the "cpath-admin.sh -premerge" (using big Reactome's 'Homo sapiens.owl' dtaa..); - tried to tune JVM by using -XX:PermSize=128m -XX:MaxPermSize=256m (because it seems related to the heap used in java reflection stuff...), but the error still occurs...